--- a/views/login.hbs
+++ b/views/login.hbs
@@ -85,7 +85,11 @@
                 </div>
                 <div class="card-body">
                   <form action="/login" method="POST" role="form">
-                    <label>Email</label>
+                    {{!-- <label>Email</label>
+                    <div class="mb-3">
+                      <input class="form-control" type="text" name="email" placeholder="username">
+                    </div> --}}
+                    <label>Username</label>
                     <div class="mb-3">
                       <input class="form-control" type="text" name="email" placeholder="username">
                     </div>
