--- a/views/manufact.hbs
+++ b/views/manufact.hbs
@@ -357,7 +357,7 @@
                       <span class="text-xs">Small Box</span>
                       <hr class="horizontal dark my-3">
                       <button id="small" name="boxsize" type="button" class="btn btn-light btn-sm mb-0"
-                        value='{"size ":"small","weight":"100", "dimensions" : {"width" : "200", "height" : "100}}'>Generate</button>
+                        value='{"pname":"Small Box", "size":"small", "height":"5", "width":"10", "weight":"200"}'>Generate</button>
                     </div>
                   </div>
                 </div>
