Fetched The Request To Dashboard

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -427,6 +427,7 @@
                     <tr>
                       <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Item Name</th>
                       <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Author</th>
+                      <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Mobile</th>
                       <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Address</th>
                       <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Dim & Weight</th>
                       <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Accept</th>
@@ -448,6 +449,11 @@
                       <td>
                         <div class="d-flex flex-column justify-content-center">
                             <h6 class="mb-0 text-sm">{{this.author}}</h6>
+                        </div>
+                      </td>
+                      <td>
+                        <div class="d-flex flex-column justify-content-center">
+                            <h6 class="mb-0 text-sm">{{this.mobile}}</h6>
                         </div>
                       </td>
                        <td>
