--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -186,7 +186,7 @@
                 <i class="fa fa-bell cursor-pointer"></i>
               </a>
               <ul class="dropdown-menu  dropdown-menu-end  px-2 py-3 me-sm-n4" aria-labelledby="dropdownMenuButton">
-                <li class="mb-2">
+                {{!-- <li class="mb-2">
                   <a class="dropdown-item border-radius-md" href="javascript:;">
                     <div class="d-flex py-1">
                       <div class="my-auto">
@@ -203,8 +203,8 @@
                       </div>
                     </div>
                   </a>
-                </li>
-                <li class="mb-2">
+                </li> --}}
+                {{!-- <li class="mb-2">
                   <a class="dropdown-item border-radius-md" href="javascript:;">
                     <div class="d-flex py-1">
                       <div class="my-auto">
@@ -251,7 +251,7 @@
                       </div>
                     </div>
                   </a>
-                </li>
+                </li> --}}
               </ul>
             </li>
           </ul>
